--- a/src/app/component/camera/camera-all.component.css
+++ b/src/app/component/camera/camera-all.component.css
@@ -1,3 +1,7 @@
+.list-camera img {
+    cursor: pointer;
+}
+
 .camera-schedule {
     height: 700px;
 }
@@ -15,8 +19,10 @@
     height: 700px;
     border: 1px solid green;
 }
-
-.list_video .video{
+.list-video {
+    margin-top: 20px;
+}
+.list-video .video{
     height: 100px;
     border: 1px solid black;
     margin-bottom: 10px;
